--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecoleta</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="content">
             <header>
                 <img src="icones/logo.svg" alt="Logomarca">
-                <a href="#">
+                <a href="create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
