--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ecoleta</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -37,7 +38,25 @@
 
     </div>
 
-    
+    <div id="modal" class="hide">
+        <div class="content">
+            <div class="header">
+                <h1>Pontos de coleta</h1>
+                <a href="#">Fechar</a>
+            </div>
+            <!--Vamos usar o label por questão de acessibilidade-->
+            <label for="search">Cidade</label>
+            <form action="search-results.html"> 
+                <div class="search field">
+                    <input type="text" name="search" placeholder="Pesquise por cidade">
+                    <button>
+                        <img src="/icones/search.svg" alt="Buscar">
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 
+    <script src="scripts/index.js"></script>
 </body>
 </html>
